[package]
name = "dsr"
authors = ["Ella Pash"]
version = "0.1.0"
edition = "2021"
description = "A datastore for the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
dirs = "4.0.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"]}
tokio = { version = "1.20.0", features = ["macros"]}
